# YT_Music_Downloader

./: .gitignore  README.md  pyproject.toml
src/ytmd/: app.py
src/ytmd/downloader/: playlist.py
src/ytmd/interfaces/: cli.py  gui.py
src/ytmd/utils/: files.py
