[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-music-downloader"
version = "0.1.0"
description = "YouTube playlist audio downloader"
requires-python = ">= 3.12"
authors = [
    { name = "Malak" }
]

dependencies = [
    "pytubefix",
    "mutagen",
    "requests",
    "flet"
]

[project.scripts]
ytmd = "ytmd.app:main"